# CapstoneDesign-2026-1

./: .gitignore  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/chrome-device/Default/: BrowsingTopicsState  (+10 more)
.dart_tool/extension_discovery/: devtools.json
android/app/: build.gradle.kts
assets/translations/: en.json  ja.json  ko.json  vi.json  zh.json
backend/: .env  .env.example  bridge.db  main.py  matching_db_service.py  pyproject.toml  requirements.txt  seed_data.py  test_db.py
backend/app/: email_verifier.py  notification_utils.py
backend/app/core/: database.py  profanity_filter.py
backend/app/core/data/: slang.csv
backend/app/models/: user.py
backend/app/routers/: auth.py  chat.py  help_posts.py  language_exchange.py  matches.py  matching.py  notifications.py  sessions.py  translation.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/constants/: knu_data.dart  profile_data.dart  profile_labels.dart
lib/core/: api_client.dart
lib/models/: app_notification.dart  chat_message.dart  match_user.dart  user_model.dart
lib/services/: auth_service.dart  help_post_service.dart  match_service.dart  notification_service.dart  session_history_service.dart  translation_service.dart  user_service.dart
lib/theme/: app_theme.dart
lib/utils/: avatar_color.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+103 files in other folders)
